--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Social links profile</title>
@@ -16,19 +16,28 @@
 </head>
 <body>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
+  <main class="wrapper">
+    <div class="social-container">
+      <img src="assets/images/profile_pic.jpg" alt="social profile" class="user-image">
+      <h1 class="user-name">Rodrigo Pereira</h1>
+      <p class="user-location">Ceara, Brazil</p>
+      <p class="user-description">"Front-end developer."</p>
+      <ul class="social-links">
+        <li><a href="#" class="list-item">GitHub</a></li>
+        <li><a href="#" class="list-item">Frontend Mentor</a></li>
+        <li><a href="#" class="list-item">LinkedIn</a></li>
+        <li><a href="#" class="list-item">Twitter</a></li>
+        <li><a href="#" class="list-item">Instagram</a></li>
+      </ul>
+    </div>
+  </main>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </footer>
+
 </body>
 </html>
