--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <p class="user-location">Ceara, Brazil</p>
       <p class="user-description">"Front-end developer."</p>
       <ul class="social-links">
-        <li><a href="#" class="list-item">GitHub</a></li>
-        <li><a href="#" class="list-item">Frontend Mentor</a></li>
-        <li><a href="#" class="list-item">LinkedIn</a></li>
-        <li><a href="#" class="list-item">Twitter</a></li>
-        <li><a href="#" class="list-item">Instagram</a></li>
+        <li><a href="https://github.com/rodrigopereira21" class="list-item">GitHub</a></li>
+        <li><a href="https://www.frontendmentor.io/profile/rodrigopereira21" class="list-item">Frontend Mentor</a></li>
+        <li><a href="https://www.linkedin.com/in/rodrigo-pereira-70b9282a6/" class="list-item">LinkedIn</a></li>
+        <li><a href="https://x.com/RodrigoRikiishi" class="list-item">Twitter</a></li>
+        <li><a href="https://www.instagram.com/rodrigorikiishi/?next=%2F" class="list-item">Instagram</a></li>
       </ul>
     </div>
   </main>
